# lyraT-tf-micro-speech

./: README.md  sdkconfig  train_micro_speech_model.ipynb
components/: CMakeLists.txt
components/MediaHal/: CMakeLists.txt  EspAudioSys.c  EspAudioSys.h  MediaHal.c  MediaHal.h  component.mk  lock.c  lock.h  playlistNameDef.h  userconfig.h
components/MediaHal/Driver/: ES8388_interface.c  ES8388_interface.h
components/MediaHal/Driver/test/: Es8388_I2s_Test.c  Es8388_I2s_Test.h  music_data.h
components/tfmicro/: CMakeLists.txt
main/: CMakeLists.txt  feature_provider.cc  lyraT_audio_provider.h  main_functions.cc  main_functions.h  micro_speech_test.h  recsrc.h
main/esp/: audio_provider.cc  lyraT_audio_provider.cc  main.cc  micro_speech_test.cc  recsrc.c
main/micro_features/: micro_model_settings.h
